# Spacecrafter-2018

./: .gitignore  CMakeLists.txt  install_dependancies_ubuntu.sh
data/: default_ssystem.ini
shaders/: CMakeLists.txt  body_artificial.frag  body_artificial.vert  ring_planet.vert  viewportShape.frag
src/: CMakeLists.txt  CPUInfo.cpp  anchor_creator_cor.cpp  anchor_creator_cor.hpp  anchor_manager.cpp  anchor_manager.hpp  anchor_point.cpp  anchor_point.hpp  anchor_point_body.cpp  anchor_point_body.hpp  anchor_point_observatory.cpp  anchor_point_observatory.hpp  anchor_point_orbit.cpp  anchor_point_orbit.hpp  app.cpp  app.hpp  app_command_color.cpp  app_command_color.hpp  app_command_interface.cpp  app_command_interface.hpp  app_settings.cpp  app_settings.hpp  atmosphere.cpp  atmosphere.hpp  audio.cpp  axis.cpp  axis.hpp  body.cpp  body.hpp  body_artificial.cpp  body_artificial.hpp  body_bigbody.cpp  body_bigbody.hpp  body_color.cpp  body_color.hpp  body_decor.cpp  body_decor.hpp  body_moon.cpp  body_moon.hpp  body_smallbody.cpp  (+205 more)
util/server_standalone/: sender_client.c
util/src_converter/: converter.cpp  obj3D.cpp  obj3D.hpp  obj_common.hpp  obj_to_ojm.cpp  obj_to_ojm.hpp
